Fri Feb 19 15:19:59 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/multicast/multicast.rc:
        * dds/DCPS/transport/udp/udp.rc:
        * dds/monitor/monitor.rc:

          Added resource files to new core libraries so that their DLLs
          will contain descriptive names and version information.

Fri Feb 19 03:56:04 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Added missing whitespace.

Fri Feb 19 03:44:59 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/README:

          Updated path information.

Fri Feb 19 03:09:30 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/doc/images:
        * performance-tests/Bench/doc/userguide.html:

          Initial outline of user guide.

        * performance-tests/Bench/src/DataReaderListener.cpp:

          Adjust output radix to be more useful (counts in decimal make
          more sense).

Thu Feb 18 22:37:42 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/DCPS/HTemplate.pm:

          #include the tao_idl-generated *C.h instead of *S.h.

Thu Feb 18 22:08:14 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * tools/odds_dissector/odds_dissector.mpc:
        * tools/odds_dissector/odds_export.h:
        * tools/odds_dissector/odds_packet.cpp:
        * tools/odds_dissector/odds_plugin.cpp:

          Updates to support hidden visibility on GCC 4.1.x and up.

Thu Feb 18 21:41:25 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/ReliableSession.cpp:

          Dropped use of acked_ flag for passive sessions.

Thu Feb 18 21:22:42 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataSampleHeader.h:
        * dds/DCPS/DataSampleHeader.inl:

          Fixed bad bit twiddling for historic samples introduced by
          submessage_id_.

Wed Feb 17 19:56:32 UTC 2010  Steven Stallion  <stallions@ociweb.com>